Panels flicker while animating (Wayland)
Categories
(Core :: Widget: Gtk, defect, P3)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr102 | --- | unaffected |
| firefox107 | --- | unaffected |
| firefox108 | --- | verified |
| firefox109 | --- | verified |
People
(Reporter: gregp, Assigned: emilio)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: regression)
Attachments
(4 files)
Steps to reproduce:
- Navigate to a website
- Click the lock icon in the address bar
- Click the shield icon in the address bar
Actual results:
Occasional flicker
Expected results:
Normal animation
Updated•3 years ago
|
Updated•3 years ago
|
Comment 1•3 years ago
|
||
What do you mean by "animation"? Just hide/show or is there anything else?
| Reporter | ||
Comment 2•3 years ago
|
||
(In reply to Martin Stránský [:stransky] (ni? me) from comment #1)
What do you mean by "animation"? Just hide/show or is there anything else?
Just the opacity/transform animation that appears during hide/show, yes.
Comment 3•3 years ago
|
||
Which compositor do you use? Please attach your about:support page.
Thanks.
| Reporter | ||
Comment 4•3 years ago
|
||
| Reporter | ||
Updated•3 years ago
|
I can also reproduce this on Ubuntu 22.10 when switching from the Pocket panel to the hamburger menu. It does not happen with ui.panelAnimations = 0.
Regression window:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=3924518919682eae3ae92f9c6da486b361e4ea80&tochange=8e9534dd0451f24dd851905af796475b61aa8e44
Regressed by Bug 1799901.
Comment 7•3 years ago
|
||
:emilio, since you are the author of the regressor, bug 1799901, could you take a look? Also, could you set the severity field?
For more information, please visit auto_nag documentation.
| Assignee | ||
Comment 8•3 years ago
|
||
Bug 1800442 will disable these again for now.
| Assignee | ||
Comment 9•3 years ago
|
||
I don't have time to dig into them right now so disable there for now.
I could repro the flickering on Arch Linux, but I couldn't repro the
incorrectly-transparent popup or the incorrectly-open extension popup...
Updated•3 years ago
|
Comment 10•3 years ago
|
||
I think the flickering here will be fixed by disabled move-to-rect popup placement. But better to disable the animations now due to Bug 1800442.
Comment 11•3 years ago
|
||
Comment 12•3 years ago
|
||
| bugherder | ||
Comment 13•3 years ago
|
||
The patch landed in nightly and beta is affected.
:emilio, is this bug important enough to require an uplift?
- If yes, please nominate the patch for beta approval.
- If no, please set
status-firefox108towontfix.
For more information, please visit auto_nag documentation.
| Assignee | ||
Comment 14•3 years ago
|
||
Comment on attachment 9303768 [details]
Bug 1800368 - Disable panel animations on Wayland for regressions. r=stransky
Beta/Release Uplift Approval Request
- User impact if declined: comment 0 and duplicate
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: Yes
- If yes, steps to reproduce: comment 0
- List of other uplifts needed: none
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Very targeted, restores previous behavior.
- String changes made/needed: none
- Is Android affected?: No
| Assignee | ||
Updated•3 years ago
|
Comment 15•3 years ago
|
||
Comment on attachment 9303768 [details]
Bug 1800368 - Disable panel animations on Wayland for regressions. r=stransky
Approved for 108.0b4
Comment 16•3 years ago
|
||
| bugherder uplift | ||
Updated•3 years ago
|
Comment 17•3 years ago
|
||
Reproduced the issue with Firefox 108.0a1 (2022-11-12) on Ubuntu 22.04 by following the info provided in Comment 0.
The issue is fixed on Firefox 108.0b4 and Firefox 109.0a1 (2022-11-20) on the same system.
Description
•