Bug 1800368 - Disable panel animations on Wayland for regressions. r=stransky

I don't have time to dig into them right now so disable there for now.

I could repro the flickering on Arch Linux, but I couldn't repro the
incorrectly-transparent popup or the incorrectly-open extension popup...

Differential Revision: https://phabricator.services.mozilla.com/D162240